# yclib-extract

./: .env.example  .flake8  .gitignore  CONTEXT.md  GEMINI.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: ignore_sources.json  startup_school_curriculum.yaml  tag_normalization.yaml
docs/: ALTMAN_ESSAY_WORKFLOW.md  PG_ESSAY_WORKFLOW.md  PIPELINE_ORCHESTRATION.md  STARTUP_SCHOOL_WORKFLOW.md  USAGE.md  YC_LIBRARY_WORKFLOW.md  companies_by_tag.md
docs/codebase/: .codebase-scan.txt  ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
scripts/: __init__.py  build_curriculum.py  fetch_altman_essays.py  fetch_pg_essays.py  get_transcript.py  quality_report.py  yclib-extract
scripts/orchestration/: build_curriculum.py
scripts/resources/: enrich_metadata_tags.py  fetch_altman_essays.py  fetch_pg_essays.py
scripts/shared/: README.md  __init__.py  cli_base.py  metadata_utils.py  output_formatters.py  path_utils.py  resource_registry.py
scripts/utility/: quality_report.py
src/yclib_extract/: __init__.py  cli.py  companies.py  config.py  extractor.py  pipeline.py  scraper.py
src/yclib_extract/commands/: init.py
tests/: conftest.py  test_altman_pipeline.py  test_cli.py  test_companies.py  test_config.py  test_curriculum.py  test_curriculum_injection.py  test_extractor.py  test_footnote_processing.py  test_frontmatter.py  test_html_cleaning.py  test_init.py  test_optional_deps.py  test_pg_pipeline.py  test_pipeline.py  test_pipeline_e2e.py  test_posthaven_date.py  test_regressions.py  test_scraper.py  test_shared_modules.py  test_tag_defaults.py  test_transcript_recovery.py  test_transcripts.py  test_yc_library_metadata.py  test_yc_library_pipeline.py
tests/fixtures/: live_office_hours.html
(+7 files in other folders)
